# Chess

./: CMakeLists.txt
.github/workflows/: build_and_test.yml
Chess/: Board.h  Eval.cpp  Eval.h  MoveGen.cpp  MoveGen.h  Placeholder.cpp  Search.cpp  Search.h  Utils.cpp  Utils.h
ChessInteractive/: Main.cpp
ChessUCI/: Main.cpp
Tests/: TestMoveGen.cpp  TestPlaceholder.cpp  TestSearch.cpp  TestUtils.cpp
